--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,35 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
+# ⚙️ Node dependencies
+node_modules/
+.pnp/
 .pnp.js
 
-# testing
-/coverage
+# 🧪 Test coverage
+coverage/
 
-# production
-/build
+# 🏗️ Builds (Vite ou outros)
+dist/
+build/
 
-# misc
+# 🧪 Vite cache
+.vite/
+
+# 🔑 Environment files
+.env
+.env.*
+!.env.example
+
+# 🧼 Mac e sistema
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
+# 🧹 Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# ⚠️ Editor configs (opcional)
+*.swp
+*.swo
+*.sublime-workspace
+*.sublime-project
+.idea/
+.vscode/
